<resources>
    <string name="app_name">AplicacionRestaurante</string>
    <string name="tituloPrincipalTexto">Restaurante</string>
    <string name="botonPedidosPrincipal">Pedidos</string>
    <string name="botonMesasPrincipal">Mesas</string>
    <string name="ingresoTextoPruebaName">IngresarTextoCualquiera</string>
    <string name="botonDePruebaTexto">Imprimir mensaje</string>
    <string name="tituloPrincipalMesas">Mesas</string>
    <string name="botonEnvioSocket">CrearMesaEnFireBase</string>
    <string name="botonMesa1">1</string>
    <string name="botonMesa2">2</string>
    <string name="botonMesa3">3</string>
    <string name="botonAnadirMesa">+</string>
    <string name="botonGenerarPedido">Generar pedido</string>
    <string name="tituloVentanaPedidos">Pedidos</string>
    <string name="acercaDe">Acerca de</string>
    <string name="finalizarPedidoDetalles">Finalizar</string>
    <string name="limpiarPedidoDetalles">Limpiar</string>
    <string name="tituloPrincipalRealizarPedido">Realizar pedido</string>
    <string name="CompletarAccion">Listo</string>
    <string name="mesaEtiqueta">Mesa:</string>
    <string name="botonVersionApp">Versión</string>
</resources>
