<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodbackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonPedidos1"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/botonPedidosPrincipal"
        android:onClick="dirigirAPedidos"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonMesas1"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/botonMesasPrincipal"
        android:onClick="dirigirAMesas"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloPrincipal"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tituloPrincipalTexto"
        android:textColorHint="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonGenerarPedido"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/botonGenerarPedido"
        android:onClick="generarPedidoFireBase"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonPedidos1" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="16dp"
        android:onClick="verConfiguraciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/configicon" />

</androidx.constraintlayout.widget.ConstraintLayout>